@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

interface Handler {
  - next: Handler
  + set_next_handler(handler: Handler)
  + handle(request)
}

class BaseHandler {
  - next: Handler
  + set_next_handler(handler: Handler)
  + handle(request)
}

class ConcreteHandler {
  + handle(request)
}

Handler <|---  BaseHandler
Handler <---o  BaseHandler : has-a
BaseHandler <|--- ConcreteHandler

@enduml